# stam-m-wood-c-de-stress-2021

./: README.md  data_prep.py  fixing_decoy_pdbs.py  helper_functions.py  pca_analysis.py  pca_visualisation.py  pyproject.toml  sampling_decoy_pdbs.py  sampling_pdb_files.py
analysis/: README.md  README.txt  comp_1_contr.csv  comp_2_contr.csv  feat_contr_to_cmpts.csv  scaled_data.csv  test.csv  var_explained.csv
data/: README.md  README.txt
de-stress_output/: 1N8V.csv  1N8VA.csv  1N8VA_extra_natives.csv  1Z18A_40decoys.csv  1ZI8.csv  1ZI8A.csv  1ZI8A_extra_natives.csv  2HS1.csv  2HS1A_extra_natives.csv  2XOD.csv  3CHB.csv  3CHBD.csv  3CHBD_extra_natives.csv  3D32A.csv  3LDC.csv  3NJN.csv  3NJNA.csv  3NJNA_extra_natives.csv  3WCQ.csv  3WCQA.csv  3WDC.csv  3WDCA.csv  3WDCA_extra_natives.csv  README.md  combined_data.csv
de-stress_output/de-stress_output_20decoys/: 2HS1A.csv  2YH5A.csv  3MMHA.csv  combined_data.csv
de-stress_output/de-stress_output_old/: 1N8VA_40decoys.csv  2HS1A_40decoys.csv  2YH5A_40decoys.csv  3CHBD_40decoys.csv  3D32A_40decoys.csv  3MMHA_40decoys.csv  3NJNA_40decoys.csv  3WCQA_40decoys.csv  3WCQA_extra_natives.csv  3WDCA_40decoys.csv  combined_data.csv
de-stress_output/test/: 1BYIA.csv  1Q92A.csv  2BT9A.csv  2HS1A.csv  3CCDA.csv  3PIWA.csv  4HRRB.csv  combined_data.csv  scaled_data.csv
